# gql-prompt

./: README.md  main.py  pyproject.toml
